address review comments from Jonathan